--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta3
  	- Moved /modules/init.php to /lib/init.php
	- Removed Checkboxes from Search page and added ability to 
		search on Comment and Rating
  	- Fixed a missing close tag on the catalog build if ampache was
		unable to get the filesize of a file
  	- Fixed link to Statistics page, user link has been missing
		since the new interface was put into place
  	- Added new getid3() wrapper (vainfo) should resolve the
		id3 tags in oggs issue that some people were having
		and makes file only tag basis possible. requires
		and update to your ampache.cfg.php
  	- Fixed Transcoding logic issue and added preset line for
		transcoding flac files in .dist file (Defaulted to Off)
  	- Upgraded to Getid3() 1.7.6
  	- Fixed an issue where the new song->get_url() wasn't respecting
		the force_http_play, this also fixes a long outstanding
		bug with localplay + https + force_http_play
  	- Added PCRE check on /test.php and updated to use Ros's new
		spiffy theme
  	- Added pruning of empty playlists (Admin Only)
  	- Fixed error on /login.php when theme isn't set which caused
		a fopen failure to show up in the logs
  	- Improved MPD class to use PHP 4.3+ socket timeout settings so
		that if your MPD server goes down while in MPD mode it
		doesn't hard-lock ampache. 
  	- Supressed deprecated var warnings in PHP5
  	- Fixed link to playlist import
	- Fixed playlist add on every catalog add (I'm not kidding this 
		time... really..)
  	- Fixed Access Control List so that it prevents Login if you are
		not inside the allowed range. 
  	- Fixed Localplay/Stream Buttons so that they also work if you
		have use_auth disabled
  	- Added Icecast Controller (Thx Nikk)